--- a/ThienNga2/Web.config
+++ b/ThienNga2/Web.config
@@ -14,7 +14,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=tcp:nguyennhat.database.windows.net,1433;Data Source=nguyennhat.database.windows.net;Initial Catalog=ThienNgaDatabase;Persist Security Info=False;User ID=nguyennhat@nguyennhat;Password=320395@qwE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" /><!--<add name="ThienNgaEntities3" connectionString="Server=tcp:nguyennhat.database.windows.net,1433;Data Source=nguyennhat.database.windows.net;Initial Catalog=ThienNgaDatabase;Persist Security Info=False;User ID=nguyennhat@nguyennhat;Password=320395@qwE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />-->
     <add name="ThienNgaDatabaseEntities" connectionString="metadata=res://*/Models.Entities.ThienNgaModel.csdl|res://*/Models.Entities.ThienNgaModel.ssdl|res://*/Models.Entities.ThienNgaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=nguyennhat.database.windows.net,1433;initial catalog=ThienNgaDatabase;persist security info=True;user id=nguyennhat@nguyennhat;password=320395@qwE;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+   </connectionStrings>
   
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,7 +24,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="false" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <customErrors mode="Off" />
     <httpModules>
