--- a/ThienNga2/bin/ThienNga2.dll.config
+++ b/ThienNga2/bin/ThienNga2.dll.config
@@ -21,7 +21,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None"/>
-    <compilation debug="false" targetFramework="4.5.2"/>
+    <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
     <customErrors mode="Off"/>
     <httpModules>
