Add chức năng cập nhật từ file
hê ê ez

--- a/ThienNga2/ThienNga2.csproj
+++ b/ThienNga2/ThienNga2.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Controllers\ProductItemController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\WarrantyController.cs" />
+    <Compile Include="Controllers\XMLReader.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
