--- a/ThienNga2/ThienNga2.csproj
+++ b/ThienNga2/ThienNga2.csproj
@@ -366,9 +366,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\formTemplate.css" />
-    <Content Include="Content\images\flying-drones.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Content\images\flying-drones.jpg" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\navigation.css" />
     <Content Include="Content\SearchBar.css" />
