--- a/ThienNga2/Web.config
+++ b/ThienNga2/Web.config
@@ -22,9 +22,8 @@
   </appSettings>
   <system.web>
     <authentication mode="None"/>
-    <compilation debug="true" targetFramework="4.5.2"/>
+    <compilation debug="false" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2" maxRequestLength="1048576"/>
-    <roleManager enabled="true" />
     <customErrors mode="Off"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
