--- a/ThienNga2/ThienNga2.csproj
+++ b/ThienNga2/ThienNga2.csproj
@@ -384,6 +384,7 @@
     <Content Include="Content\images\fixing.png" />
     <Content Include="Content\images\flying-drones.jpg" />
     <Content Include="Content\images\green.png" />
+    <Content Include="Content\images\red-delete-button-icon-62906.png" />
     <Content Include="Content\images\red.png" />
     <Content Include="Content\images\reparing.png" />
     <Content Include="Content\images\special.png" />
